twidder/static/css/user-view.css
/* ... */
/* Tabs */
#tab-home {
    display: flex;
}

#tab-browse, #tab-account {
    display: none;
}

/* Home tab specific */

#home-page {
    width: 100%;
    height: 100%;
}

#home-reload-button {
    position: absolute;
    top: 100px;
    left: calc(50% + 100px - 24px);
    border-radius: 100%;
    transition: 0.2s;
    padding: 8px;
    cursor: pointer;
}

#home-reload-button:hover {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

@media screen and (max-width: 700px) {
    #home-reload-button {
        top: 266px;
        left: calc(50% + 128px - 24px);
    }
}

#home-user-background {
    width: 100%;
    height: 160px;
    background-color: white; /* background color here */
}

#home-user-page {
    width: 100%;
    height: fit-content;
    margin: auto;
    background-color: white;
    padding-bottom: 10px;
    transition: 0.2s;
}

/* Browse tab specific */

#browse-page {
    width: 100%;
    height: 100%;
}

#form-search-user {
    position: fixed;
    width: calc(100% - 200px);
    top: 5px;
    transition: 0.3s;
    z-index: 50;
}

#search-bar {
    margin: 10px;
    display: flex;
    border-radius: 25px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

#search-bar input {
    width: 100%;
    height: 36px;
    border-radius: 25px 0 0 25px;
    text-align: left;
    padding-left: 20px;
    padding-right: 0;
    transition: 0.2s;
}

#search-bar input:focus:invalid {
    border: 1px solid #e7e7e7;
    outline: none;
}

#search-bar input:focus:valid {
    border: 1px solid #e7e7e7;
    outline: none;
}

#search-bar input:not(:focus) {
    border: 1px solid #e7e7e7;
    outline: none;
}

#search-bar button {
    width: 120px;
    padding-left: 0;
    color: #2196F3;
    background-color: white;
    border: 1px solid #2196F3;
    border-top-right-radius: 25px;
    border-bottom-right-radius: 25px;
    transition: 0.2s;
}

#search-bar button:hover {
    background: #2196F3;
    color: #ffffff;
}

@media screen and (max-width: 700px) {
    #form-search-user {
        margin-top: 55px;
        width: 100%;
    }
}

@media screen and (max-width: 400px) {
    #form-search-user {
        margin-top: 50px;
    }
}

#browse-user-background {
    width: 100%;
    height: 160px;
    background-color: orange;
}

#container-user-page {
    display: none;
    width: 100%;
    height: fit-content;
    margin: auto;
    background-color: white;
    padding-bottom: 10px;
    transition: 0.2s;
}

/* Shared between Home tab and Browse tab */

#home-user-page-user-info, #browse-container-user-info {
    position: absolute;
    width: fit-content;
    top: 100px;
    left: 340px;
}

#home-user-page-user-info img, #browse-container-user-info img {
    width: 120px;
    height: 120px;
    padding: 16px;
    background-color: white;
    border-radius: 25px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

#home-user-page-user-info div, #browse-container-user-info div {
    font-family: Tahoma, sans-serif;
    font-size: 16px;
}

#container-home-wall, #container-wall {
    display: flex;
    height: fit-content;
}

#home-wall, #browse-wall {
    display: block;
    margin: auto;
}

#form-home-new-post, #form-browse-new-post {
    width: 400px;
    height: 150px;
    border-radius: 10px;
    padding: 10px;
    margin-top: 10px;
    background-color: white;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

#form-home-new-post textarea, #form-browse-new-post textarea {
    width: 394px;
    height: 120px;
    text-align: left;
    transition: 0.2s;
    border: 0;
    outline: 0;
    resize: none;
    font-family: Tahoma, sans-serif;
    font-size: 16px;
}

#form-home-new-post button, #form-browse-new-post button {
    float: right;
    width: 130px;
    height: 30px;
    background-color: white;
    border: 1px solid #04AA6D;
    border-radius: 5px;
    transition: 0.2s;
}

#form-home-new-post button:hover, #form-browse-new-post button:hover {
    color: white;
    background: #04AA6D;
}

#home-post-template, #browse-post-template {
    display: none;
}

.user-post {
    width: 400px;
    height: 150px;
    border-radius: 10px;
    padding: 10px;
    margin-top: 10px;
    background-color: white;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.user-post .author {
    font-family: Tahoma, sans-serif;
    font-size: 14px;
    color: gray;
}

.user-post .time {
    float: right;
    font-family: Tahoma, sans-serif;
    font-size: 12px;
    padding-top: 1px;
    padding-bottom: 1px;
    color: gray;
}

.user-post .content {
    padding-top: 6px;
    height: 104px;
    font-family: Tahoma, sans-serif;
    font-size: 16px;
}

.user-post .button-edit, .user-post .button-delete {
    float: right;
    padding: 3px;
    margin-left: 2px;
    margin-right: 2px;
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

.user-post .button-edit:hover {
    background-color: green;
}

.user-post .button-delete:hover {
    background-color: red;
}

@keyframes post-appear {
    0%  {opacity: 0; height: 0;}
    50%  {opacity: 0; height: 150px;}
    100%   {opacity: 1;}
}

@keyframes post-appear-inner {
    0%  {display: none;}
    75%  {display: none; opacity: 0;}
    100%  {display: unset; opacity: 1;}
}

@keyframes post-disappear {
    0%   {opacity: 1;}
    100%  {opacity: 0; height: 0; padding: 0; margin: 0}
}

@keyframes post-disappear-inner {
    0%  {display: unset; opacity: 1;}
    25%  {display: none; opacity: 0;}
    100%  {display: none;}
}

@media screen and (max-width: 1275px) {
    #home-user-page-user-info, #browse-container-user-info {
        left: 240px;
    }
}

@media screen and (max-width: 1050px) {
    #home-wall, #browse-wall {
        margin: unset;
        margin-left: auto;
        margin-right: 30px;
    }
}

@media screen and (max-width: 880px) {
    #home-user-page-user-info, #browse-container-user-info {
        position: static;
        margin: auto;
    }

    #home-wall, #browse-wall {
        margin: auto;
    }
}
/* ... */

